# IOT

./: BUILD.gn  build.sh  main.c
include/: common.h  device_manager.h  list_control.h  message_control.h  mqtt_async_control.h  package_control.h  serial_control.h
services/: config_net.sh  coordinator_daemon.sh  coordinator_process_service.cfg  coordinator_process_service.rc  run.sh
src/: device_manager.c  list_control.c  message_control.c  mqtt_async_control.c  package_control.c  serial_control.c
