# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("coordinator_config") {
  include_dirs = [ "include" ]
  cflags = [
  ]
}

ohos_executable("coordinator_service") {                                                                                                                                                   
  install_enable = true

  sources = [
    "main.c",
    "src/serial_control.c",
    "src/device_manager.c",
    "src/package_control.c",
    "src/message_control.c",
    "src/mqtt_async_control.c",
  ]

  configs = [ ":coordinator_config" ]
  deps = [
    "//device/rockchip/rk3566/third_party/paho.mqtt.c:paho-mqtt3as",
    "//third_party/cJSON:cjson_static",
  ]


  include_dirs = [ 
  "include",
  "//third_party/cJSON",
  ]
  part_name = "rockchip_products"
  install_images = [
    "system",
    "updater",
  ]
  install_enable = true
}

